# Algo1

./: README.md
tp implementacion/tpi_grupo4/: CMakeLists.txt  auxiliares.cpp  auxiliares.h  ejercicios.cpp
tp implementacion/tpi_grupo4/testGrupo/: test2.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp
